# snugtify

./: components.json  package.json  pnpm-lock.yaml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/spotify/: mod.rs
src/components/: Nav.tsx
