[package]
name = "snugtify"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tauri = { version = "1.4.0", features = [] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
librespot = "0.4.2"
librespot-connect = "0.4.2"
librespot-metadata = "0.4.2"
librespot-playback = "0.4.2"
librespot-protocol = "0.4.2"
tokio = { version = "1", features = ["rt", "macros", "signal", "sync", "parking_lot", "process"] }
anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
flume = "0.11.0"
config_parser2 = "0.1.5"
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dirs-next = "2.0.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
